# workshop_ci

./: .travis.yml  CMakeLists.txt  README.md
include/: hello.hpp
src/: hello.cpp  main.cpp
tests/: test_hello.cpp
